--- a/app/languages/fr.yml
+++ b/app/languages/fr.yml
@@ -127,7 +127,7 @@ models:
       transferable: Reportable
       keep_entries: Historiser
       last_letter: Dernier lettrage
-      deadline_id: Échéance
+      delay_id: Échéance
       entity_id: Partenaire
       parent_id: Parent
       comment: Commentaire
@@ -287,7 +287,7 @@ models:
       updated_at: Date de mise à jour
       updated_by: Modificateur
       lock_version: Version
-  deadline:
+  delay:
     name: Délai
     attributes:
       name: Nom
@@ -327,7 +327,7 @@ models:
     name: Contact
     attributes:
       entity_id: Partenaire
-      contact_type_id: Type
+      contact_nature_id: Type
       contact_norm_id: Norme
       active: Actif
       closed_on: Désactivé le
@@ -383,7 +383,7 @@ models:
       updated_at: Date de mise à jour
       updated_by: Modificateur
       lock_version: Version
-  entity_contact_type:
+  entity_contact_nature:
     name: Type de contact
     attributes:
       name: Nom
@@ -453,7 +453,7 @@ models:
       updated_at: Date de mise à jour
       updated_by: Modificateur
       lock_version: Version
-  financialyear_type:
+  financialyear_nature:
     name: Type d'exercice comptable
     attributes:
       name: Nom
@@ -518,7 +518,7 @@ models:
       updated_at: Date de mise à jour
       updated_by: Modificateur
       lock_version: Version
-  journal_type:
+  journal_nature:
     name: Type de journal
     attributes:
       name: Nom
@@ -798,7 +798,7 @@ app:
               title: Accéder au menu de paramétrage
             nature:
               title: Gérer les natures de partenaires
-            contact_type:
+            contact_nature:
               title: Gérer les types de contact
             contact_norm:
               title: Gérer les normes postales
@@ -858,13 +858,13 @@ app:
               title: Gérer les banques
             journal:
               title: Gérer les journaux
-            journal_type:
+            journal_nature:
               title: Gérer les types de journaux
-            financialyear_type:
+            financialyear_nature:
               title: Gérer les types d'exercices comptables
             currency:
               title: Gérer les monnaies
-            deadline:
+            delay:
               title: Gérer les délais
     sales:
       title: Ventes
