git-svn-id: https://www.fdsea33.fr/svn/praesens@12 3e045664-9743-0410-8348-e8b78a369948

--- a/app/languages/fr.yml
+++ b/app/languages/fr.yml
@@ -327,8 +327,8 @@ models:
     name: Contact
     attributes:
       entity_id: Partenaire
-      contact_nature_id: Type
-      contact_norm_id: Norme
+      nature_id: Type
+      norm_id: Norme
       active: Actif
       closed_on: Désactivé le
       line_2: N°appartement ou de boîte à lettres - Étage - Couloir - Escalier ou service - Identité du destinataire
