--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+THIS REPOSITORY IS NOT ACTIVE ANYMORE
+See https://github.com/ekylibre/ekylibre
+
+
 == Welcome to Rails
 
 Rails is a web-application and persistence framework that includes everything
